[gd_scene load_steps=16 format=2]

[ext_resource path="res://trainer/king/king.tres" type="Resource" id=1]
[ext_resource path="res://battle/graphic.gd" type="Script" id=2]
[ext_resource path="res://widgets/theme.tres" type="Theme" id=3]
[ext_resource path="res://widgets/pokemon_info_player.tscn" type="PackedScene" id=4]
[ext_resource path="res://widgets/info_box.tscn" type="PackedScene" id=6]
[ext_resource path="res://widgets/menu_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://battle/battle.gd" type="Script" id=8]
[ext_resource path="res://widgets/sprites/panel.png" type="Texture" id=11]
[ext_resource path="res://widgets/menu.gd" type="Script" id=12]
[ext_resource path="res://widgets/pokemon_info_enemy.tscn" type="PackedScene" id=13]
[ext_resource path="res://trainer/blue/blue.tres" type="Resource" id=14]
[ext_resource path="res://widgets/tween_ex.gd" type="Script" id=17]
[ext_resource path="res://widgets/pokemon_menu.tscn" type="PackedScene" id=18]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 1.0
content_margin_right = 1.0
content_margin_top = 1.0
content_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 1.0
content_margin_right = 1.0
content_margin_top = 1.0
content_margin_bottom = 1.0

[node name="battle" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
color = Color( 0.6, 0.6, 0.6, 1 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
player = ExtResource( 14 )
enemy = ExtResource( 1 )

[node name="tween" type="Tween" parent="."]
script = ExtResource( 17 )

[node name="enemy" type="Position2D" parent="."]
script = ExtResource( 2 )

[node name="pokemon" type="Position2D" parent="enemy"]
position = Vector2( 126, 29 )

[node name="trainer" parent="enemy" instance_placeholder="res://trainer/red/red_trainer_graphic.tscn"]

[node name="stats" parent="enemy" instance=ExtResource( 13 )]
visible = false

[node name="player" type="Position2D" parent="."]
script = ExtResource( 2 )

[node name="pokemon" type="Position2D" parent="player"]
position = Vector2( 28, 73 )

[node name="trainer" parent="player" instance_placeholder="res://trainer/blue/blue_trainer_graphic.tscn"]

[node name="stats" parent="player" instance=ExtResource( 4 )]
visible = false
position = Vector2( 80, 72 )

[node name="info" parent="." instance=ExtResource( 6 )]

[node name="action_menu" type="PanelContainer" parent="."]
visible = false
margin_left = 60.2832
margin_top = 96.0511
margin_right = 160.283
margin_bottom = 144.051
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 10
custom_styles/panel = SubResource( 1 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
menu_items = [ NodePath("m/m/rows/col_1/fight"), NodePath("m/m/rows/col_1/item"), NodePath("m/m/rows/col_2/pokemon"), NodePath("m/m/rows/col_2/run") ]

[node name="m" type="NinePatchRect" parent="action_menu"]
margin_left = 1.0
margin_top = 1.0
margin_right = 98.9998
margin_bottom = 47.0
texture = ExtResource( 11 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="m" type="MarginContainer" parent="action_menu/m"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rows" type="HBoxContainer" parent="action_menu/m/m"]
margin_left = 6.0
margin_top = 6.0
margin_right = 91.0
margin_bottom = 40.0

[node name="col_1" type="VBoxContainer" parent="action_menu/m/m/rows"]
margin_right = 47.0
margin_bottom = 34.0

[node name="fight" parent="action_menu/m/m/rows/col_1" instance=ExtResource( 7 )]
capitalize = true
text = "fight"
selected = true

[node name="item" parent="action_menu/m/m/rows/col_1" instance=ExtResource( 7 )]
margin_top = 17.0
margin_bottom = 30.0
capitalize = true
text = "item"

[node name="col_2" type="VBoxContainer" parent="action_menu/m/m/rows"]
margin_left = 51.0
margin_right = 84.0
margin_bottom = 34.0

[node name="pokemon" parent="action_menu/m/m/rows/col_2" instance=ExtResource( 7 )]
margin_right = 33.0
capitalize = true
text = "pkm"

[node name="run" parent="action_menu/m/m/rows/col_2" instance=ExtResource( 7 )]
margin_top = 17.0
margin_right = 33.0
margin_bottom = 30.0
capitalize = true
text = "run"

[node name="fight_menu" type="PanelContainer" parent="."]
visible = false
margin_left = 34.0
margin_top = 96.0
margin_right = 160.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 10
custom_styles/panel = SubResource( 2 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="m" type="NinePatchRect" parent="fight_menu"]
margin_left = 1.0
margin_top = 1.0
margin_right = 125.0
margin_bottom = 47.0
texture = ExtResource( 11 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="m" type="MarginContainer" parent="fight_menu/m"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 6
custom_constants/margin_top = 4
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="col_1" type="VBoxContainer" parent="fight_menu/m/m"]
margin_left = 6.0
margin_top = 4.0
margin_right = 118.0
margin_bottom = 40.0
custom_constants/separation = -5

[node name="yes_no_menu" type="PanelContainer" parent="."]
visible = false
margin_top = 61.0
margin_right = 46.0
margin_bottom = 97.0
size_flags_vertical = 10
custom_styles/panel = SubResource( 2 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
menu_items = [ NodePath("m/m/col_1/yes"), NodePath("m/m/col_1/no") ]

[node name="m" type="NinePatchRect" parent="yes_no_menu"]
margin_left = 1.0
margin_top = 1.0
margin_right = 45.0
margin_bottom = 35.0
texture = ExtResource( 11 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="m" type="MarginContainer" parent="yes_no_menu/m"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 6
custom_constants/margin_top = 4
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="col_1" type="VBoxContainer" parent="yes_no_menu/m/m"]
margin_left = 6.0
margin_top = 4.0
margin_right = 39.0
margin_bottom = 29.0
custom_constants/separation = -1

[node name="yes" parent="yes_no_menu/m/m/col_1" instance=ExtResource( 7 )]
margin_right = 33.0
capitalize = true
text = "yes"
selected = true

[node name="no" parent="yes_no_menu/m/m/col_1" instance=ExtResource( 7 )]
margin_top = 12.0
margin_right = 33.0
margin_bottom = 25.0
capitalize = true
text = "no"

[node name="items" type="PanelContainer" parent="."]
visible = false
margin_left = 30.0
margin_top = 17.0
margin_right = 160.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 10
custom_styles/panel = SubResource( 1 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="m" type="NinePatchRect" parent="items"]
margin_left = 1.0
margin_top = 1.0
margin_right = 129.0
margin_bottom = 86.0
texture = ExtResource( 11 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="m" type="MarginContainer" parent="items/m"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="col_1" type="VBoxContainer" parent="items/m/m"]
margin_left = 6.0
margin_top = 6.0
margin_right = 122.0
margin_bottom = 79.0

[node name="pokemon_list" parent="." instance=ExtResource( 18 )]
visible = false
